<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Clasher Calendar</string>
    <string name="townhall_level">Town Hall Level</string>
    <string name="action_delete">Delete</string>
    <string name="village_name">Village Name</string>
    <string name="button_next">>>></string>
    <string name="grid_title1">Qty</string>
    <string name="grid_title2">Building</string>
    <string name="grid_title3">Level</string>
    <string name="grid_title4">Max Level</string>
    <string name="grid_title5">Cost</string>
    <string name="grid_title6">Build Time</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="action_fix_levels">Update Building Levels</string>
    <string name="action_settings">Settings</string>
    <string name="action_dashboard">Back to Dashboard</string>
    <string name="action_inc_th_level">Upgrade Townhall</string>
    <string name="action_home">Home</string>
    <string name="drawer_open">Open Nav Drawer</string>
    <string name="drawer_close">Close Nav Drawer</string>
	<string name="nav_title">Select Items to Show</string>
	<string name="nav_maxed">Maxed Items</string>
	<string name="nav_elixir">Costing Elixir</string>
	<string name="nav_gold">Costing Gold</string>
	<string name="nav_defence">Defensive Buildings</string>
	<string name="nav_resource">Resource Buildings</string>
	<string name="nav_army">Army Buildings</string>
	<string name="nav_other">Other Buildings</string>
	<string name="nav_walls">Walls</string>
	<string name="nav_trap">Traps</string>
	<string name="existing_players">Loading existing players, please wait....</string>
	<string name="cdIvUpgradeCostElixir">Elixir Icon</string>
	<string name="cdIvUpgradeCostGold">Gold Icon</string>
	<string name="cdIvUpgradeCostDarkElixir">Dark Elixir Icon</string>
	<string name="quit">Exit</string>
	<string name="really_quit">Are you sure you want to exit?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="pref_confirm_exit">Confirm to Exit</string>
	<string name="pref_confirm_exit_summ">Prompt before exiting the application</string>
</resources>
