<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.derekgillett.clashercalendar.MainActivity" >

    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
         />

    <item
        android:id="@+id/action_fix_levels"
        android:title="@string/action_fix_levels"
        />
    
    <item
        android:id="@+id/action_dashboard"
        android:title="@string/action_dashboard"
        />
    
    <item
        android:id="@+id/action_inc_th_level"
        android:title="@string/action_inc_th_level"
        />
    
    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        />
    
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
		/>    
</menu>
